feat: implement elasticsearch search for stores with mysql fallback